[gd_scene load_steps=22 format=2]

[ext_resource path="res://assets/fonts/arial.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://src/ui/Saves.tscn" type="PackedScene" id=2]
[ext_resource path="res://src/Transition.tscn" type="PackedScene" id=3]
[ext_resource path="res://src/ui/GameOver.gd" type="Script" id=4]
[ext_resource path="res://assets/sfx/game_over.wav" type="AudioStream" id=5]
[ext_resource path="res://src/ui/AndroidButtons.tscn" type="PackedScene" id=6]

[sub_resource type="DynamicFont" id=4]
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=6]
content_margin_left = 5.0
content_margin_right = 5.0
content_margin_top = 5.0
content_margin_bottom = 5.0
bg_color = Color( 0, 0, 0, 0 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 1, 1, 1, 1 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id=2]
content_margin_left = 5.0
content_margin_right = 5.0
content_margin_top = 5.0
content_margin_bottom = 5.0
bg_color = Color( 0, 0, 0, 0 )

[sub_resource type="StyleBoxFlat" id=7]
content_margin_left = 5.0
content_margin_right = 5.0
content_margin_top = 5.0
content_margin_bottom = 5.0
bg_color = Color( 1, 1, 1, 0.196078 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id=15]
bg_color = Color( 0, 0.403922, 0.972549, 1 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5

[sub_resource type="StyleBoxFlat" id=14]
bg_color = Color( 1, 1, 1, 1 )
border_width_top = 1
border_width_bottom = 1
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxEmpty" id=9]

[sub_resource type="StyleBoxFlat" id=8]
bg_color = Color( 0, 0, 0, 0 )
border_width_bottom = 1

[sub_resource type="StyleBoxFlat" id=13]
bg_color = Color( 0, 0, 0, 0 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
corner_radius_top_left = 5
corner_radius_top_right = 5
expand_margin_left = 5.0
expand_margin_right = 5.0
expand_margin_top = 5.0
expand_margin_bottom = 5.0

[sub_resource type="StyleBoxFlat" id=10]
bg_color = Color( 0, 0, 0, 0 )
border_width_bottom = 1
expand_margin_left = 5.0
expand_margin_right = 5.0
expand_margin_top = 5.0
expand_margin_bottom = 5.0

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.0509804, 0.0509804, 0.0509804, 0.392157 )
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color( 1, 1, 1, 1 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id=12]
bg_color = Color( 0.0509804, 0.0509804, 0.0509804, 0.392157 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 1, 1, 1, 1 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id=11]
content_margin_left = 5.0
content_margin_right = 5.0
content_margin_top = 5.0
content_margin_bottom = 5.0
draw_center = false
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 1, 1, 1, 1 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="Theme" id=3]
Button/fonts/font = SubResource( 4 )
Button/styles/focus = SubResource( 6 )
Button/styles/normal = SubResource( 2 )
Button/styles/pressed = SubResource( 7 )
HSlider/styles/grabber_area = SubResource( 15 )
HSlider/styles/grabber_area_highlight = SubResource( 15 )
HSlider/styles/slider = SubResource( 14 )
LineEdit/styles/focus = SubResource( 9 )
LineEdit/styles/normal = SubResource( 8 )
OptionButton/styles/focus = SubResource( 13 )
OptionButton/styles/normal = SubResource( 10 )
OptionButton/styles/pressed = SubResource( 13 )
PanelContainer/styles/panel = SubResource( 5 )
PopupMenu/styles/hover = SubResource( 12 )
PopupMenu/styles/panel = SubResource( 11 )

[sub_resource type="DynamicFont" id=1]
size = 100
font_data = ExtResource( 1 )

[node name="GameOver" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = SubResource( 3 )
script = ExtResource( 4 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )

[node name="Main" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="CenterContainer" type="CenterContainer" parent="Main"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="Main/CenterContainer"]
margin_left = 490.0
margin_top = 210.0
margin_right = 590.0
margin_bottom = 510.0
rect_min_size = Vector2( 100, 300 )
custom_constants/separation = 10
alignment = 2

[node name="Continue" type="Button" parent="Main/CenterContainer/VBoxContainer"]
margin_top = 232.0
margin_right = 100.0
margin_bottom = 261.0
focus_neighbour_top = NodePath("../Exit")
focus_neighbour_bottom = NodePath("../Exit")
mouse_filter = 2
text = "Continue"

[node name="Exit" type="Button" parent="Main/CenterContainer/VBoxContainer"]
margin_top = 271.0
margin_right = 100.0
margin_bottom = 300.0
focus_neighbour_top = NodePath("../Continue")
focus_neighbour_bottom = NodePath("../Continue")
mouse_filter = 2
text = "Exit"

[node name="MarginContainer" type="MarginContainer" parent="Main"]
anchor_right = 1.0
margin_bottom = 113.0
rect_min_size = Vector2( 0, 400 )

[node name="Label" type="Label" parent="Main/MarginContainer"]
margin_top = 143.0
margin_right = 1080.0
margin_bottom = 256.0
custom_fonts/font = SubResource( 1 )
text = "Game Over"
align = 1

[node name="Saves" parent="." instance=ExtResource( 2 )]
visible = false

[node name="Transition" parent="." instance=ExtResource( 3 )]

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )

[node name="AndroidButtons" parent="." instance=ExtResource( 6 )]

[connection signal="pressed" from="Main/CenterContainer/VBoxContainer/Continue" to="." method="_on_Continue_pressed"]
[connection signal="pressed" from="Main/CenterContainer/VBoxContainer/Exit" to="." method="_on_Exit_pressed"]
[connection signal="cancel_pressed" from="Saves" to="." method="_on_Saves_cancel_pressed"]
[connection signal="save_loaded" from="Saves" to="." method="_on_Saves_save_loaded"]
